--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="song_artist">Artist</string>
     <string name="current_song_time">0.0</string>
     <string name="end_song_time">0.0</string>
-    <string name="title">Not Spotify™</string>
+    <string name="title">Music Player™</string>
     <string name="favorites">Favorites</string>
     <string name="dark_mode">Dark Mode</string>
     <string name="playlist">Playlists</string>
@@ -12,7 +12,12 @@
     <string name="home">Home</string>
     <string name="menu_home">Home</string>
     <string name="menu_favorites">Favorites</string>
-    <string name="menu_playlist">Playlist</string>
+    <string name="menu_playlist">Playlists (not implemented yet)</string>
     <string name="theme">Dark Mode</string>
     <string name="enable_dark_mode">Dark Mode</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="remove_from_favorites">Remove from favorites</string>
+    <string name="sort_by_song">Sort by song</string>
+    <string name="sort_by_artist">Sort by artist</string>
+    <string name="sort">Sort</string>
 </resources>
